--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Mini-Bloqueur</title>
+  <title>AppBlock</title>
   <link rel="stylesheet" href="popup.css">
 </head>
 <body>
