--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <h3>Mini-Bloqueur</h3>
+      <h3>AppBlock</h3>
       <button id="themeToggle" class="theme-toggle" title="Changer de thème">
         <span class="theme-icon">🌙</span>
       </button>
